[tool.poetry]
name = "quivr"
version = "0.1.0"
description = "Dump all your files and thoughts into your GenerativeAI Second Brain and chat with it"
authors = ["Stan Girard"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "0.0.166"
Markdown = "3.4.3"
openai = "0.27.6"
pdf2image = "1.16.3"
pypdf = "3.8.1"
streamlit = "1.22.0"
StrEnum = "0.4.10"
supabase = "1.0.3"
tiktoken = "0.4.0"
unstructured = "0.6.5"
anthropic = "0.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
