[project]
name = "quivr-monorepo"
version = "0.0.1"
description = "Quivr Monorepo"
authors = [
    { name = "Stan Girard", email = "stan@quivr.app" },
    { name = "Amine Diro", email = "amine@quivr.app" },
    { name = "Chloé Daems", email = "chloe@quivr.app" },
]
dependencies = [
    "packaging>=22.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
universal = true
dev-dependencies = [
    "mypy>=1.11.1",
    "pre-commit>=3.8.0",
    "ipykernel>=6.29.5",
    "ruff>=0.6.0",
    "flake8>=7.1.1",
    "flake8-black>=0.3.6",
    "pytest-dotenv>=0.5.2",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.8",
    "pytest>=8.3.2",
    "pytest-xdist>=3.6.1",
    "pytest-cov>=5.0.0",
    "tox>=4.18.0",
]

[tool.rye.workspace]
members = [".", "core", "worker", "api"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"