[project]
name = "quivr-api"
version = "0.1.0"
description = "quivr backend API"
authors = [{ name = "Stan Girard", email = "stan@quivr.app" }]
dependencies = [
    "quivr-core",
    "supabase>=2.0.0",
    "fastapi>=0.100.0",
    "uvloop>=0.18.0",
    "python-jose>=3.0.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.6",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "sqlmodel>=0.0.21",
    "celery[redis]>=5.4.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "unidecode>=1.3.8",
    "fpdf>=1.7.2",
    "colorlog>=6.8.2",
    "posthog>=3.5.0",
    "pyinstrument>=4.7.2",
    "sentry-sdk[fastapi]>=2.13.0",
    "google-api-python-client>=2.141.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "dropbox>=12.0.2",
    "msal>=1.30.0",
    "notion-client>=2.2.1",
    "markdownify>=0.13.1",
    "langchain-openai>=0.1.21",
    "resend>=2.4.0",
    "langchain>=0.2.14",
    "litellm>=1.43.15",
    "openai>=1.40.8",
    "tiktoken>=0.7.0",
    "langchain-community>=0.2.12",
    "langchain-cohere>=0.2.2",
    "llama-parse>=0.4.9",
    "pgvector>=0.3.2",
]
readme = "README.md"
requires-python = "< 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
universal = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["quivr_api"]


[[tool.rye.sources]]
name = "quivr-core"
path = "../quivr-core"
