[project]
name = "quivr-worker"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Stan Girard", email = "stan@quivr.app" }
]
dependencies = [
    "quivr-core",
    "quivr-api",
    "celery[redis]>=5.0.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.0.0",
    "openai>=1.0.0",
    "flower>=2.0.1",
    "torch==2.4.0+cpu",
    "torchvision==0.19.0+cpu",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["quivr_worker"]

[[tool.rye.sources]]
name = "pytorch"
find_links = "https://download.pytorch.org/whl/torch_stable.html"

[[tool.rye.sources]]
name = "quivr-core"
path = "../quivr-core"

[[tool.rye.sources]]
name = "quivr-api"
path = "../quivr-api"
