[project]
name = "quivr-worker"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Stan Girard", email = "stan@quivr.app" }
]
dependencies = [
    "quivr-core[all]",
    "quivr-api",
    "celery[redis]>=5.0.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.0.0",
    "openai>=1.0.0",
    "flower>=2.0.1",
    "torch==2.4.0; platform_machine != 'x86_64'" ,
    "torch==2.4.0+cpu; platform_machine == 'x86_64'",
    "torchvision==0.19.0; platform_machine != 'x86_64'",
    "torchvision==0.19.0+cpu; platform_machine == 'x86_64'",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["quivr_worker"]

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

[[tool.rye.sources]]
name = "quivr-core"
path = "../quivr-core"

[[tool.rye.sources]]
name = "quivr-api"
path = "../quivr-api"
