[package]
name = "notion-fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "notion_fetcher"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
notion = "0.6.0"
pyo3 = "0.20.0"
pyo3-asyncio = { version = "0.20.0", features = [
    "tokio-runtime",
    "attributes",
] }
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
rusqlite = { version = "0.32.1", features = ["chrono", "uuid"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = [
    "chrono",
    "derive",
    "json",
    "sqlite",
    "runtime-tokio",
] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
