[package]
name = "notion-fetcher"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.7", features = ["tracing"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
notion = "0.6.0"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
rusqlite = { version = "0.32.1", features = ["chrono", "uuid"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-rusqlite = "0.6.0"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
