[project]
name = "notion-fetcher"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "aminediro", email = "aminedirhoussi1@gmail.com" }
]
dependencies = [
    "maturin>=1.7.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = []

[tool.maturin]
python-source = "python"
module-name = "notion_fetcher._lowlevel"
features = ["pyo3/extension-module"]
