[project]
name = "quivr-diff-assistant"
version = "0.1.0"
description = "Diff Assistant"
authors = [
    { name = "Stan Girard", email = "stan@quivr.app" }
]

dependencies = [
    "python-doctr>=0.9.0",
    "matplotlib>=3.9.2",
    "mplcursors>=0.5.3",
    "diff-match-patch>=20230430",
    "scikit-learn>=1.5.1",
    "numpy>=1.16.0",
    "unstructured>=0.15.9",
    "python-magic>=0.4.27",
    "pypdfium2>=4.30.0",
    "numba>=0.60.0",
    "docx2txt>=0.8",
    "openpyxl>=3.1.5",
    "faiss-cpu>=1.8.0.post1",
    "llama-index>=0.11.8",
    "openai>=1.44.1",
    "pandas>=2.2.2",
    "pypdf>=4.3.1",
    "llama-index-readers-file>=0.2.1",
    "llama-index-llms-openai>=0.2.3",
    "python-dotenv>=1.0.1",
    "langchain>=0.2.16",
    "langchain-openai>=0.1.24",
    "opencv-python>=4.10.0.84",
    "megaparse>=0.0.31",
    "h5py==3.10.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["quivr_diff_assistant"]
